--- a/modules/mdTruyenThong/fwNews/style.css
+++ b/modules/mdTruyenThong/fwNews/style.css
@@ -66,7 +66,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     color:var(--color-primary);
     padding: 16px 8px;
 }
