--- a/modules/_default/fwHome/style.css
+++ b/modules/_default/fwHome/style.css
@@ -702,6 +702,10 @@
     -webkit-box-orient: vertical;  
 }
 
+.wrapper_staff .staff_info .text .button-wrap{
+    text-align: center;
+}
+
 .wrapper_staff .staff_img .text {
     width:50%;
     padding-right: 10%;
@@ -848,6 +852,10 @@
     .wrapper_staff .staff_info .text{
         width: 100%;
         max-width: unset;
+    }
+
+    .wrapper_staff .staff_info .text .button-wrap{
+        text-align: left;
     }
 
     .container_staff .pc .wrapper_staff {
