--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -38,6 +38,7 @@
 ***********/
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600,700,800,900');
 
 /*********************************
 2. Body and some general stuff
@@ -140,23 +141,23 @@ p a:hover::after {
 p::selection {}
 
 h1 {
-    font-size: 60px;
+    font-size: 66px;
 }
 
 h2 {
-    font-size: 48px;
+    font-size: 51px;
 }
 
 h3 {
-    font-size: 36px;
+    font-size: 42px;
 }
 
 h4 {
-    font-size: 24px;
+    font-size: 28px;
 }
 
 h5 {
-    font-size: 18px;
+    font-size: 22px;
 }
 
 @media (max-width: 991px) {
@@ -165,15 +166,15 @@ h5 {
     }
 
     h3{
-        font-size: 26px;
+        font-size: 30px;
     }
 
     h4{
-        font-size: 22px;
+        font-size: 24px;
     }
 
     h5{
-        font-size: 16px;
+        font-size: 18px;
     }
 }
 
@@ -183,7 +184,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Montserrat', sans-serif;
+    font-family:'Roboto Slab','Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
     -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
     text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
