--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -682,8 +682,8 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
     height: 80px;
     background: #199d76;
     line-height: 80px;
-    font-size: 24px;
-    font-weight: 700;
+    // font-size: 24px;
+    font-weight: 800;
     color: white;
 }
 
