--- a/modules/_default/fwHome/style.css
+++ b/modules/_default/fwHome/style.css
@@ -223,7 +223,7 @@
 /* GIỚI THIỆU HIỆP PHÁT */
 .section-intro-hp {
     background-color: var(--color-primary);
-    padding-top: 100px;
+    padding-top: 120px;
     padding-bottom: 180px;
     /* min-height: 100vh; */
 }
@@ -563,6 +563,7 @@
 }
 .container_staff {
     width: 100%;
+    max-width: 1600px;
     margin: auto;
     background-color: var(--color-primary);
 }
@@ -667,7 +668,7 @@
 }
 
 .wrapper_staff .staff_img {
-    width: 55vw;
+    width: 55%;
     position: relative;
 }
 
@@ -993,6 +994,8 @@
 .login_form{
     /* margin-top: 100px; */
     /* min-height: 100vh; */
+    width: 100vw;
+    overflow-X: hidden;
 }
 
 .login_form .intro_form_login {
@@ -1275,6 +1278,7 @@
 
 .section_hang_GPLX .intro_hang_GPLX .gplx-wrap-item{
     padding: 8px 8px 64px 8px;
+    background-color: var(--color-white);
 }
 
 
@@ -1297,7 +1301,7 @@
 }
 
 .section_hang_GPLX .intro_hang_GPLX  .gplx-arrow >div{
-    animation-name: arrowAnimation;
+    animation-name: arrowUpAnimation;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     width:20px;
@@ -1316,7 +1320,7 @@
     animation-delay: .4s;
 }
 
-@keyframes arrowAnimation {
+@keyframes arrowUpAnimation {
     0%{
         opacity: 0;
         transform: rotate(45deg) translate(15px,15px);
@@ -2133,5 +2137,85 @@
     }
     .home-contact-button i{
         margin-right: 0;
+    }
+}
+
+/* ------------------section video intro-------------------------------- */
+.main-content{
+    /* margin-top: 50px; */
+    position: relative;
+    top:0;
+    left:0;
+    height: 100%;
+    max-width: 100vw;
+    /* overflow-x: hidden; */
+}
+.section-video-intro{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    position: relative;
+    /* top:0; */
+    /* left:0; */
+    min-height: 100vh;
+    z-index: 110;
+    width: 100%;
+}
+
+.section-video-intro .intro-video{
+    max-height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+.section-video-intro video{
+    /* position: absolute; */
+    /* top:0; */
+    /* left:0; */
+    object-fit: cover;
+    width: 100%;
+    max-height: 100vh;
+}
+
+.section-video-intro .arrow{
+    position: absolute;
+    bottom:60px;
+    left:50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+    display:inline-block;
+}
+
+.section-video-intro .arrow >div{
+    animation-name: arrowDownAnimation;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    width:20px;
+    height: 20px;
+    border-right:3px solid var(--color-white);
+    border-bottom:3px solid var(--color-white);
+    transform: rotate(45deg);
+    margin:-15px;
+}
+
+.section-video-intro  .arrow >div:nth-child(2){
+    animation-delay: -.2s;
+}
+
+.section-video-intro  .arrow >div:nth-child(3){
+    animation-delay: -.4s;
+}
+
+@keyframes arrowDownAnimation {
+    0%{
+        opacity: 0;
+        transform: rotate(45deg) translate(-15px,-15px);
+    }
+
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(15px,15px);
     }
 }
