--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -1576,8 +1576,8 @@ section {
 *********************************/
 
 .contact {
-    background: #eee;
-    padding-bottom: 90px;
+    background: white;
+    padding-bottom: 50px;
 }
 
 .contact_form_container {
