--- a/modules/_default/fwHome/style.css
+++ b/modules/_default/fwHome/style.css
@@ -1010,7 +1010,7 @@
     padding-left: 85px;
     padding-right: 85px;
     padding-bottom: 36px;
-    padding-top: 120px;
+    padding-top: 160px;
 }
 
 .login_form .intro_form_login .login-mobile{
@@ -2181,7 +2181,7 @@
     /* top:0; */
     /* left:0; */
     min-height: 100vh;
-    z-index: 110;
+    z-index: 80;
     width: 100%;
 }
 
@@ -2229,6 +2229,104 @@
     animation-delay: -.4s;
 }
 
+.intro-menu{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    position: fixed;
+    right:0;
+    top:50%;
+    transform: translateY(-50%);
+    width: 230px;
+    z-index: 120;
+
+}
+
+
+
+.intro-menu ul{
+    /* overflow-x: hidden; */
+    transform: translateX(180px);
+    transition: all .2s linear;
+}
+
+.intro-menu .intro-menu-move{
+    transform: translateX(0);
+}
+
+.intro-menu ul li{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    background-color: #f0f0f0;
+    margin-bottom: 4px;
+    border-radius: 3px 0 0 3px;
+    transition: all .2s linear;
+}
+
+
+
+.intro-menu ul li a{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    padding:12px 16px;
+    color:#333;
+    font-size: 16px;
+}
+
+.intro-menu ul li a i{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    font-size:20px;
+    color:#666;
+    margin-right: 30px;
+}
+
+.intro-menu .intro-menu-text{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    display: inline-block;
+    height: 100%;
+    color:#999;
+    display: none;
+}
+
+.intro-menu li:hover{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    background-color: #D1D9E7;
+    margin-bottom: 3px;
+    border-radius: 3px 0 0 3px;
+    transform: translateX(0);
+}
+
+.intro-menu-bar{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    display: inline-block;
+    border-radius: 3px 0 0 3px;
+    padding:12px 16px;
+    width: 48px;
+    background-color: #0FAD56;
+    margin-left: auto;
+    cursor: pointer;
+}
+
+.intro-menu-bar i{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    font-size: 20px;
+    color:var(--color-white);
+    margin-left: auto;
+}
+
+.intro-menu li:hover a,
+.intro-menu li:hover i{
+    /* height: 100vh; */
+    /* overflow: hidden; */
+    color:#0FAD56;
+}
 @keyframes arrowDownAnimation {
     0%{
         opacity: 0;
