--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -1265,14 +1265,27 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
     left: 0;
     width: 100vw;
     z-index: 100;
-    background-color: white;
+    background-color:white;
 }
 
 .header.scrolled .header_content {
-    background-color: #199d76;
+    background-color:#199d76;
     height: 75px;
     box-shadow: 0px 0px 10px whitesmoke;
 }
+.header.header_video{
+    background-color: transparent;
+}
+.header.header_video .header_content {
+    background-color:rgba(25, 157, 118, 0.5) !important;
+}
+
+.header.scrolled .header_content {
+    background-color:#199d76;
+    height: 75px;
+    box-shadow: 0px 0px 10px whitesmoke;
+}
+
 .header.scrolled .main_nav ul li a {
     font-size: 16px;
     font-weight: 600;
