--- a/modules/mdTruyenThong/fwLaw/law.scss
+++ b/modules/mdTruyenThong/fwLaw/law.scss
@@ -3,11 +3,11 @@
     &-link{
         display: inline-block;
         width: 100%;
-        margin-left: -15px;
-        margin-right: -15px;
+        height: 100%;
         & img{
             width: 100%;
             height: 170px;
+            min-height: 100%;
             object-fit: cover;
         }
     }
