them dinh vi giao vien

--- a/view/admin/admin.pug
+++ b/view/admin/admin.pug
@@ -7,6 +7,7 @@ html(lang='vi')
         meta(content=htmlWebpackPlugin.options.keywords.toString())
         meta(content=htmlWebpackPlugin.options.description name='description')
         link(rel='stylesheet' type='text/css' href='/css/font-awesome.min.css')
+        link(rel='stylesheet' href='https://unpkg.com/leaflet@1.4.0/dist/leaflet.css' integrity='sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==' crossorigin='')
     body
         #app.app.sidebar-mini.rtl
         script(type='text/javascript' src='/js/jquery.min.js')
@@ -21,6 +22,7 @@ html(lang='vi')
         script(type='text/javascript' src='/js/plugins/select2.min.js')
         script(type='text/javascript' src='/js/plugins/chart.js')
         script(type='text/javascript' src='/js/plugins/ckeditor/ckeditor.js')
+        script(src='https://unpkg.com/leaflet@1.4.0/dist/leaflet.js' integrity='sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==' crossorigin='')
         //- script(type='text/javascript' src='/js/plugins/jsBarcode.all.min.js')
         //- script(type='text/javascript' src='/js/plugins/qrcode.min.js')
         //script(type='text/javascript' src='https://cdn.ckeditor.com/4.10.1/full/ckeditor.js')
